HTML logging formatter